# bdnr

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: mongo.ipynb  neo4j.ipynb  neo4j.md  neo4jv2.ipynb
notebooks/benchmark/: benchmark.md  mongo.ipynb  mongo.md  neo4j.ipynb
notebooks/exploratory_data_analysis/: neo4j_eda.ipynb
notebooks/overview/: neo4j.ipynb
notebooks/recommendations/: data_modeling.md  mongo.ipynb  recsys.ipynb
src/benchmark/: dto.py  mongo_benchmark.py  mongo_listener.py  neo4j_benchmark.py  utils.py
