[project]
name = "bdnr"
version = "0.0.1"
description = "Base de Datos No Relacionales"
authors = [
    {name = "Enzo Faliveni",email = "enzo.faliveni@mercadolibre.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil (>=7.0.0,<8.0.0)",
    "pymongo (>=4.13.1,<5.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "py2neo (>=2021.2.4,<2022.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
